# minishell

./: CMakeLists.txt  Makefile  README.md  minishell  test_shit
includes/: minishell.h
libft_printf/: Makefile
libft_printf/includes/: ft_printf.h
libft_printf/libft/: Makefile
libft_printf/libft/includes/: libft.h
libft_printf/libft/src/: ft_atoi.c  ft_getchar.c  ft_isalnum.c  ft_isspace.c  ft_putnchar.c  ft_strcat.c  ft_strchr_index.c  ft_strjoin.c  ft_strjoin_free.c  ft_strjoin_free_first.c  ft_strndup.c  ft_strsub.c
libft_printf/src/: ft_convert.c
src/: .nfs.20051037.762f  access.c  env_info.c  env_to_arr.c  errors.c  execute.c  ft_cd.c  ft_echo.c  ft_help.c  ft_setenv.c  ft_unsetenv.c  main.c  parse_dollar.c  prompt.c  read_line.c  split_commands.c  split_line.c
